Frontseite zeigt "Mehr..." wenn es mehr gibt

--- a/layouts/partials/event_p.html
+++ b/layouts/partials/event_p.html
@@ -23,6 +23,11 @@
                           <div class="box-masonry-desription">
                               <p>{{ .Summary }}</p>
                           </div>
+                          {{ if .Truncated }}
+                          <div>
+                            <a href="{{ .RelPermalink }}">Mehr…</a>
+                          </div>
+                          {{ end }}
                       </div>
                   </div>
               </div>
