Update theme to latest revision
Update hugo-creative-portfolio-theme to
commit e942b135c83970a4ea18609cbde1156346c48e3d

The new theme version requires hugo version 0.20 or newer.

--- a/themes/hugo-creative-portfolio-theme/layouts/_default/single.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="col-xs-12 col-sm-8 col-md-9 content-column white-background">
-  {{ partial "mobileNavToggle.html" . }}
+  {{ partial "mobile_nav_toggle.html" . }}
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
