--- a/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
@@ -10,7 +10,7 @@
         <li><a href="{{ $url }}{{ .url }}">{{ .name }}</a></li>
       {{ end }}
     </ul>
-    {{ partial "socialButtonsInSideBar.html" . }}
+    {{ partial "social_buttons_in_sidebar.html" . }}
 
     <div class="copyright">
       <p class="credit">
