--- a/themes/hugo-creative-portfolio-theme/layouts/about/list.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/about/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="col-xs-12 col-sm-8 col-md-9 content-column white-background">
-  {{ partial "mobileNavToggle.html" . }}
+  {{ partial "mobile_nav_toggle.html" . }}
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
