--- a/themes/hugo-creative-portfolio-theme/layouts/partials/portfolio.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/portfolio.html
@@ -1,8 +1,8 @@
 <div class="col-xs-12 col-sm-8 col-md-9 content-column">
-    {{ partial "mobileNavToggle.html" . }}
+    {{ partial "mobile_nav_toggle.html" . }}
     <div class="grid">
         <div class="row">
-          {{ range (where .Data.Pages "Section" "event") }}
+          {{ range (where .Data.Pages "Section" "portfolio") }}
               <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
                   <div class="box-masonry">
                       {{ if and (isset .Params "image") .Params.image }}
@@ -20,7 +20,7 @@
                       <div class="box-masonry-text">
                       {{ end }}
                           <h4><a href="{{ .Permalink }}">{{ .Title }}</a></h4>
-                          <div class="box-masonry-desription">
+                          <div class="box-masonry-description">
                               <p>{{ .Summary }}</p>
                           </div>
                       </div>
