Update our theme layout modifications
Also rename content/event/index.md which caused problems
with recent hugo versions (tested with 0.40).

The newer hugo versions also ignore posts with future dates,
so adapt the "hackspace" event to use "weight" value instead
of date to appear first in listing.

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -20,7 +20,7 @@
 
     {{ partial "kalender.html" . }}
 
-    {{ partial "socialButtonsInSideBar.html" . }}
+    {{ partial "social_buttons_in_sidebar.html" . }}
 
     <div class="copyright">
       <p class="credit">
