--- a/layouts/partials/about_p.html
+++ b/layouts/partials/about_p.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 col-sm-12 col-md-12 content-column">
-    {{ partial "mobileNavToggle.html" . }}
+    {{ partial "mobile_nav_toggle.html" . }}
     <div class="grid">
         <div class="row">
           {{ range (where .Data.Pages "Section" "about") }}
