--- a/layouts/partials/event_p.html
+++ b/layouts/partials/event_p.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 col-sm-8 col-md-9 content-column">
-    {{ partial "mobileNavToggle.html" . }}
+    {{ partial "mobile_nav_toggle.html" . }}
     <div class="grid">
         <div class="row">
           {{ range (where .Data.Pages "Section" "event") }}
@@ -20,7 +20,7 @@
                       <div class="box-masonry-text">
                       {{ end }}
                           <h4><a href="{{ .Permalink }}">{{ .Title }}</a></h4>
-                          <div class="box-masonry-desription">
+                          <div class="box-masonry-description">
                               <p>{{ .Summary }}</p>
                           </div>
                           {{ if .Truncated }}
